Reset of scss files

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <title>Omnifood</title>
 
   <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  
+  <h1>Osman</h1>
 </body>
 </html>
