--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
 								eating well today. You can cancel or pause anytime. And the
 								first meal is on us!
 							</p>
-							<form action="#" class="cta-form">
+							<form netlify action="#" name="sign-up" class="cta-form">
 								<div>
 									<label for="fullName">Full Name</label>
 									<input
